Fix - broken images & layout issue on calander

--- a/src/assets/styles/cmps/_SearchModal.scss
+++ b/src/assets/styles/cmps/_SearchModal.scss
@@ -70,7 +70,8 @@
   background: #ffff;
   padding: 1rem;
   justify-content: center;
-  width: 50%;
+  width: max-content;
+  // width: 50%;
   //   height: 511px;
   height: 450px;
   .rdrCalendarWrapper .rdrDateRangeWrapper {
